<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bs_send_action"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_action_send"
    app:behavior_hideable="true"
    app:behavior_skipCollapsed="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:id="@+id/handle"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/handle_bottom_sheet"
        android:backgroundTint="@color/accentColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/content_desc_for_sheet_handle" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_app_sm_tint"
        android:drawablePadding="4dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/accentTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/handle" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/send_sheet_subtitle"
        android:textAppearance="?textAppearanceCaption"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_files"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="4dp"
        android:padding="2dp"
        app:layout_constraintBottom_toTopOf="@id/btn_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:paddingVertical="4dp"
        android:text="@string/send_sheet_btn_cancel"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceMedium"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_send"
        app:layout_constraintEnd_toStartOf="@id/btn_send"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:enabled="false"
        android:paddingVertical="4dp"
        android:text="@string/send_sheet_btn_send"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceMedium"
        app:cornerRadius="50dp"
        app:elevation="0dp"
        app:icon="@drawable/ic_send"
        app:iconGravity="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>