<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bs_selected_items"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accentColor"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_skipCollapsed="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:layout_width="32dp"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:background="@drawable/handle_bottom_sheet"
        android:contentDescription="@string/content_desc_for_sheet_handle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="6dp"
        android:paddingVertical="6dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/selection_sheet_title"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/primaryTextColorInverted" />

        <ImageButton
            android:id="@+id/btn_clear_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_desc_for_clear_all_btn"
            android:src="@drawable/ic_remove_all"
            android:tint="@color/secondaryTextColorInverted" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_selection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primarySurfaceColor" />
</LinearLayout>